2004-08-22  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/sparc/jit-icode.h, config/i386/jit-icode.h,
	config/alpha/jit-icode.h, config/arm/jit-icode.h,
	config/m68k/jit-icode.h
	(HAVE_cvt_double_int_ieee, HAVE_cvt_float_int_ieee): New define
	symbols.

	* kaffe/kaffevm/jit/icode.c
	(cvt_double_int): New JIT codelet to use non Java-compatible
	floating point to integer converting instruction.
	(cvt_float_int): New JIT codelet to use non Java-compatible
	floating point to integer converting instruction.

	* test/internal/TypeConversion.java: Check for NaN (float or
	double) to int conversion.

	* test/internal/jitBasic.c: Fixed a memory overreading.
	
2004-08-21  Dalibor Topic  <robilad@kaffe.org>

	* config/powerpc/sysdepCallMethod.h:
	Add missing include.

2004-08-21  Dalibor Topic  <robilad@kaffe.org>

	* config/sparc/common.h:
	Add missing include.

2004-08-21  Dalibor Topic  <robilad@kaffe.org>

	* config/config.alias:
	Recognize armv5b.

2004-08-21  Dalibor Topic  <robilad@kaffe.org>

	Fixed cross-compilation for alpha-linux.

        * config/alpha/sysdepCallMethod.h:
	Include missing file.

      h  * kaffe/kaffevm/jit/methodcalls.c,
        kaffe/kaffevm/jit/methodcalls.h:
	Export soft_fixup_trampoline.

        * replace/ifaddrs_linux.c:
	Fix gcc 3.4.1 errors due to empty default:
	statements.

2004-08-21  Dalibor Topic  <robilad@kaffe.org>

	* m4/glibcver.m4:
	Fixed for cross compilation.

	* configure.ac:
	Adapted check for glibc old threads.

	* configure,
	config/config.h.in:
	Regenerated.

	Reported by: Guilhem Lavaux <guilhem@kaffe.org>

2004-08-19  Helmer Kraemer  <hkraemer@freenet.de>

	* kaffe/kaffevm/jit3/methodcalls.c, kaffe/kaffevm/jit3/methodcalls.h
	kaffe/kaffevm/jit/methodcalls.c, kaffe/kaffevm/jit/methodcalls.h
	kaffe/kaffevm/intrp/methodcalls.c, kaffe/kaffevm/intrp/methodcalls.h:
	new files

	* kaffe/kaffevm/jit3/Makefile.am, kaffe/kaffevm/jit/Makefile.am,
	kaffe/kaffevm/intrp/Makefile.am: added new files
